# Copyright (c) 2022 The QorAI Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

# Tests that do not run on Android
android_test_exception_sources = [
  "//qorai/browser/qorai_content_browser_client_browsertest.cc",
  "//qorai/browser/qorai_scheme_load_browsertest.cc",
  "//qorai/browser/qorai_shields/qorai_shields_web_contents_observer_browsertest.cc",
  "//qorai/browser/qorai_shields/cookie_expiry_browsertest.cc",
  "//qorai/browser/qorai_shields/domain_block_page_browsertest.cc",
  "//qorai/browser/qorai_shields/eventsource_pool_limit_browsertest.cc",
  "//qorai/browser/qorai_shields/websockets_pool_limit_browsertest.cc",
  "//qorai/browser/qorai_wallet/qorai_wallet_ethereum_chain_browsertest.cc",
  "//qorai/browser/qorai_wallet/qorai_wallet_event_emitter_browsertest.cc",
  "//qorai/browser/qorai_wallet/qorai_wallet_service_browsertest.cc",
  "//qorai/browser/qorai_wallet/qorai_wallet_sign_message_browsertest.cc",
  "//qorai/browser/qorai_wallet/qorai_wallet_tab_helper_browsertest.cc",
  "//qorai/browser/qorai_wallet/cardano_provider_renderer_browsertest.cc",
  "//qorai/browser/qorai_wallet/ethereum_provider_browsertest.cc",
  "//qorai/browser/qorai_wallet/send_or_sign_transaction_browsertest.cc",
  "//qorai/browser/qorai_wallet/solana_provider_browsertest.cc",
  "//qorai/browser/qorai_wallet/solana_provider_renderer_browsertest.cc",
  "//qorai/browser/qorai_wallet/wallet_watch_asset_browsertest.cc",
  "//qorai/browser/content_settings/qorai_content_settings_browsertest.cc",
  "//qorai/browser/debounce/debounce_browsertest.cc",
  "//qorai/browser/extensions/qorai_crx_generation_browsertest.cc",
  "//qorai/browser/extensions/qorai_extension_functional_test.cc",
  "//qorai/browser/extensions/qorai_extension_functional_test.h",
  "//qorai/browser/extensions/qorai_extension_provider_browsertest.cc",
  "//qorai/browser/extensions/extension_system_browsertest.cc",
  "//qorai/browser/perf/qorai_perf_features_processor_browsertest.cc",
  "//qorai/browser/policy/qorai_policy_browsertest.cc",
  "//qorai/browser/profiles/delete_profile_helper_browsertest.cc",
  "//qorai/browser/renderer_context_menu/qorai_mock_render_view_context_menu.cc",
  "//qorai/browser/renderer_context_menu/qorai_mock_render_view_context_menu.h",
  "//qorai/browser/renderer_context_menu/qorai_spelling_menu_observer_browsertest.cc",
  "//qorai/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//qorai/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//qorai/browser/themes/qorai_theme_service_browsertest.cc",
  "//qorai/browser/translate/qorai_translate_browsertest.cc",
  "//qorai/browser/ui/qorai_browser_command_controller_browsertest.cc",
  "//qorai/browser/ui/content_settings/qorai_autoplay_blocked_image_model_browsertest.cc",
  "//qorai/browser/ui/toolbar/qorai_app_menu_model_browsertest.cc",
  "//qorai/browser/ui/webui/qorai_wallet/wallet_panel_ui_browsertest.cc",
  "//qorai/browser/ui/webui/new_tab_page/qorai_new_tab_ui_browsertest.cc",
  "//qorai/browser/ui/webui/private_new_tab_page/qorai_private_new_tab_page_browsertest.cc",
  "//qorai/browser/ui/webui/welcome_page/qorai_welcome_ui_browsertest.cc",
  "//qorai/browser/web_package/signed_exchange_request_browsertest.cc",
  "//qorai/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//qorai/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//qorai/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//qorai/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//qorai/components/qorai_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//qorai/components/content_settings/renderer/qorai_content_settings_agent_impl_browsertest.cc",
  "//qorai/third_party/blink/renderer/modules/qorai/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

android_test_exception_deps = [
  "//qorai/browser/autoplay:browser_tests",
  "//qorai/browser/qorai_ads:browser_tests",
  "//qorai/browser/qorai_news:browser_tests",
  "//qorai/browser/qorai_rewards/test:browser_tests",
  "//qorai/browser/browsing_data:browser_tests",
  "//qorai/browser/decentralized_dns/test:browser_tests",
  "//qorai/browser/extensions",
  "//qorai/browser/extensions:test_support",
  "//qorai/browser/farbling:browser_tests",
  "//qorai/browser/net:browser_tests",
  "//qorai/browser/permissions:browser_tests",
  "//qorai/browser/psst:browser_tests",
  "//qorai/browser/test:browser_tests",
  "//qorai/browser/ui:browser_tests",
  "//qorai/browser/ui/tabs/test:browser_tests",
  "//qorai/browser/ui/views/tabs:browser_tests",
  "//qorai/components/qorai_wallet/resources:ethereum_provider_generated_resources",
  "//qorai/components/de_amp/browser/test:browser_tests",
  "//qorai/renderer/skus:browser_tests",
  "//qorai/renderer/test:browser_tests",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

# Tests that run only on Android
android_only_test_sources = [
  "//qorai/components/qorai_wallet/browser/android_page_appearing_browsertest.cc",
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//qorai/browser/partnercustomizations:delegate_public_impl_java",
  "//qorai/browser/password_manager/android:browser_tests",
  "//qorai/components/qorai_wallet/browser:test_support",
  "//qorai/components/cosmetic_filters/browser",
  "//qorai/third_party/android_deps:com_android_installreferrer_java",
  "//chrome:chrome_android_core",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",
  "//components/gcm_driver/instance_id/android:instance_id_driver_test_support_java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]
