# Copyright (c) 2023 The QorAI Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

qorai_base_shared_preferences_java_sources = [ "//qorai/base/android/java/src/org/chromium/base/shared_preferences/QorAIStrictPreferenceKeyChecker.java" ]
