# Copyright (c) 2023 The Qorai Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//qorai/components/qorai_vpn/common/buildflags/buildflags.gni")

qorai_elevation_service_lib_deps =
    [ "//qorai/components/qorai_vpn/common/buildflags" ]

if (is_win && enable_qorai_vpn) {
  qorai_elevation_service_lib_deps += [
    "//qorai/browser/qorai_vpn/win:wireguard_utils",
    "//qorai/browser/qorai_vpn/win/qorai_vpn_helper:common",
    "//qorai/browser/qorai_vpn/win/qorai_vpn_wireguard_service:install_utils",
  ]
}
